--- a/testes e placeholders/Teste1/index.html
+++ b/testes e placeholders/Teste1/index.html
@@ -18,6 +18,8 @@
         <img src="./images/Gradiente Sombra.png" class="sombra">
         <img src="./images/LuzesVelas.png" class="luzvelas">
         <img src="./images/HUD2.png" class="HUD2">
+        <img src="./images/Radar.gif" class="radar">
+
     </div>
 
 </body>
