--- a/testes e placeholders/Teste1/index.html
+++ b/testes e placeholders/Teste1/index.html
@@ -13,12 +13,17 @@
 
     <div class="game-board"> 
 
+        <img src="./images/fundo.png" class="fundo">
         <img src="./images/HUD1.png" class="HUD1">
         <img src="./images/CranioA.gif" class="cranio">
         <img src="./images/Gradiente Sombra.png" class="sombra">
         <img src="./images/LuzesVelas.png" class="luzvelas">
         <img src="./images/HUD2.png" class="HUD2">
         <img src="./images/Radar.gif" class="radar">
+        <img src="./images/Jornal.png" class="jornal">
+        <img src="./images/Placa.png" class="placa">
+        <img src="./images/Medalhas.png" class="medalhas">
+        <img src="./images/Livro.png" class="livro">
 
     </div>
 
