--- a/testes e placeholders/Teste1/index.html
+++ b/testes e placeholders/Teste1/index.html
@@ -31,8 +31,11 @@
         
     </div>
     
-    <div class="botao1" id="botao1">cq</div>
-    <div class="botao2" id="botao2"> c2</div>
+    <div id="all">
+        <button class="botao1" id="bot1"> b1 </button>  
+        <br /> 
+        <button  class="botao2" id="botao2"> b2 </button>
+    </div>
 
 </body>
 </html>
