--- a/testes e placeholders/Teste1/index.html
+++ b/testes e placeholders/Teste1/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="./css/style.css">
-    <script src="./js/script.js" defer></script>
+    <script src="./js/script.js"></script>
 
     <title>Teste 1</title>
 </head>
@@ -33,8 +33,7 @@
     
     <div id="all">
         <button class="botao1" id="bot1"> b1 </button>  
-        <br /> 
-        <button  class="botao2" id="botao2"> b2 </button>
+        <button  class="botao2" id="bot2"> b2 </button>
     </div>
 
 </body>
