--- a/testes e placeholders/Teste1/index.html
+++ b/testes e placeholders/Teste1/index.html
@@ -31,6 +31,8 @@
         
     </div>
     
+    <button class="teste" type="button" onclick="teste()">teste</button>
+
     <div id="all">
         <button class="botao1" id="bot1"> b1 </button>  
         <button  class="botao2" id="bot2"> b2 </button>
