--- a/testes e placeholders/Teste1/index.html
+++ b/testes e placeholders/Teste1/index.html
@@ -31,7 +31,7 @@
         
     </div>
     
-    <button class="teste" type="button" onclick="teste()">teste</button>
+    <button class="teste" id="teste1" type="button" onclick="teste()">teste</button>
 
     <div id="all">
         <button class="botao1" id="bot1"> b1 </button>  
