--- a/testes e placeholders/Teste1/index.html
+++ b/testes e placeholders/Teste1/index.html
@@ -26,14 +26,14 @@
     </div>
     <div class="container">
         <div class="textos">
-            <p id="texto">  Devido a acusações de traição, o antigo oficial foi... Afastado do serviço, se é que podemos falar assim. <br> Mas não se preocupe oficial, se não quiser ter o mesmo final que o antigo teve, faça diferente</p>
+            <p id="texto">  Devido a acusações de traição, o antigo oficial foi... Afastado do serviço, se é que podemos falar assim. Mas não se preocupe Oficial, se não quiser ter o mesmo final que o antigo teve, faça diferente, tome as decisões certas e as coisas vão dar certo no final, o Deus-Imperador garantirá que vai dar certo.</p>
         </div>        
         
     </div>
     
     <div id="all">
-        <button class="botao1" id="bot1" onclick="skip1()"> b1 </button>  
-        <button  class="botao2" id="bot2"> b2 </button>
+        <button class="botao1" id="bot1" onclick="introT1()"> b1 </button>  
+        <button  class="botao2" id="bot2" onclick="introT1()"> b2 </button>
     </div>
 
 </body>
