aplicando elementos novos

--- a/testes e placeholders/Teste1/index.html
+++ b/testes e placeholders/Teste1/index.html
@@ -14,7 +14,7 @@
     <div class="game-board"> 
 
         <img src="./images/fundo-px.png" class="fundo">
-        <img src="./images/HUD1.png" class="HUD1">
+        <img src="./images/hud-1.5-px.png" class="HUD1">
         <img src="./images/CranioA.gif" class="cranio">
         <img src="./images/Gradiente Sombra.png" class="sombra">
         <img src="./images/LuzesVelas.png" class="luzvelas">
