--- a/testes e placeholders/Teste1/index.html
+++ b/testes e placeholders/Teste1/index.html
@@ -28,13 +28,17 @@
         <div class="textos">
             <p id="texto">  Devido a acusações de traição, o antigo oficial foi... Afastado do serviço, se é que podemos falar assim. Mas não se preocupe Oficial, se não quiser ter o mesmo final que o antigo teve, faça diferente, tome as decisões certas e as coisas vão dar certo no final, o Deus-Imperador garantirá que vai dar certo.</p>
         </div>        
-        <div class="jornal">
-            <div id="consequencias">
-                <!-- Aqui vão as consequências das decisões -->
-            </div>
+
+
+    </div>
+
+    <div class="jornal2">
+        <div class="consequencias">
+            <p id="consequenciasT">  </p>
+            <!-- Aqui vão as consequências das decisões -->
         </div>
     </div>
-    
+        
     <div id="all">
         <button class="botao1" id="bot1" onclick="introT1()"> b1 </button>  
         <button  class="botao2" id="bot2" onclick="introT1()"> b2 </button>
