--- a/testes e placeholders/Teste1/index.html
+++ b/testes e placeholders/Teste1/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="./css/style.css">
     <script src="./js/script.js" defer></script>
 
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./fonts/PixelFJVerdana12pt.ttf">
+
     <title>Teste 1</title>
 </head>
 <body>
@@ -15,13 +19,15 @@
 
         <img src="./images/fundo-px.png" class="fundo" alt="fundo">
         <img src="./images/hud-1.5-px.png" class="HUD1" alt="HUD1">
-        <img src="./images/CranioA.gif" class="cranio" alt="cranio">
+        <img src="./images/caveira-px.gif" class="cranioA" alt="cranioA">
         <img src="./images/Gradiente Sombra.png" class="sombra" alt="sombra">
         <img src="./images/LuzesVelas.png" class="luzvelas" alt="luzvelas">
         <img src="./images/HUD2.png" class="HUD2" alt="HUD2">
-        <img src="./images/Radar.gif" class="radar" alt="radar">
+        <img src="./images/RadarPX.gif" class="radar" alt="radar">
         <img src="./images/Jornal.png" class="jornal" id="jornal" alt="jornal">
-        
+        <img src="./images/filtro-de-monitor.png" class="filtroM" alt="filtroM">
+        <img src="./images/medalhas-px.png" class="medalhas" alt="medalhas">
+        <img src="./images/placa-px.png" class="placa" alt="placa">
 
     </div>
     <div class="container">
@@ -31,6 +37,8 @@
 
 
     </div>
+
+    <div class="Caixatitulo"> <p id="titulo1"> 14° Comandante de Armas </p> </div>
 
     <div class="jornal2">
         <div class="consequencias">
