--- a/testes e placeholders/Teste1/index.html
+++ b/testes e placeholders/Teste1/index.html
@@ -20,7 +20,7 @@
         <img src="./images/hud-1.5-px.png" class="HUD1" alt="HUD1">
         <img src="./images/caveira-px.gif" class="cranioA" alt="cranioA">
         <img src="./images/Gradiente Sombra.png" class="sombra" alt="sombra">
-        <img src="./images/LuzesVelas.png" class="luzvelas" alt="luzvelas">
+        <!-- <img src="./images/LuzesVelas.png" class="luzvelas" alt="luzvelas"> -->
         <img src="./images/HUD2-px.png" class="HUD2" alt="HUD2">
         <img src="./images/RadarPX.gif" class="radar" alt="radar">
         <img src="./images/manual-px.png" class="jornal" id="jornal" alt="jornal">
