script que tá valendo é o 2:     add função percorreManual que esconde e mostra     as páginas conforme clicamos nos botões     com isso, pode jogar fora as 10 funções do     manual 👏👏👏 add manual ao html modificação no css do manual

--- a/testes e placeholders/Teste1/index.html
+++ b/testes e placeholders/Teste1/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="./css/style2.css">
-    <script src="./js/script.js" defer></script>
+    <link rel="stylesheet" href="./css/style_manual.css">
+    <script src="./js/script2.js" defer></script>
 
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
@@ -45,8 +46,36 @@
         <div class="manual">
             <img src="./images/manual-px.png" id="desenho" alt="jornal">
             <div class="areamanualT">
-                <!-- Aqui vai ser o manual de campo com as classificações das naves: -->
-                <p id="manualT"></p>
+                <p class="página" id="p1">
+                    Aqui tem tudo que um Sumo Oficial Fronteiriço precisa saber sobre naves e suas respectivas classificações, antes de permitir a passagem de algo é necessário comparar as características da nave presente na fronteira com as características de sua classe aqui escrita, a entrada só é permitida caso não haja diferença, caso contrário, ative as defesas planetárias e ordene a destruição imediata da nave, o descumprimento de suas ordens resultará em afastamento do cargo, redução do estato social de sua família e a acusação de traição, tenha em mente que apesar de ser uma acusação, ninguém foi capaz de se provar inocente, vale também mencionar que quando aberto o precesso de acusação, é iniciado simultaneamente uma ordem de localizar e destruir sobre você, ou seja, qualquer cidadão imperial tem o direito de te caçar e o dever de te executar caso tenham a chance.<br> Que o Deus-Imperador abencoe sua jornada de trabalho.
+                </p>
+                <p class="página" id="p2">
+                    <b>Classe Imperatoris</b> <br> <b>Canhões</b> - Entre 100 até 200 <br> <b>Tamanho</b> - Entre 8km por 2km até 10km por 5km <br> <b>População</b> - Entre 100 até 250 mil pessoas <br> <b>Armamentos extras</b> - Pode carregar torpedos, aríete, armas anti-projétil e canhões magnéticos <br> <b>Pode transportar mercadorias?</b> - Não <br> <b>É necessário ter licensa mercante para transportar mercadorias?</b> - Não é permitido transporte de mercadorias <br> <b>Pode ser da Frota Imperial?</b> - Sim <br> <b>É obrigatoriamente da Frota Imperial?</b> - Sim <br> <b>Pode ter armamento anti-planetário?</b> - Deve ter
+                </p>
+                <p class="página" id="p3">
+                    <b>Classe Galeão</b> <br> <b>Canhões</b> - Entre 80 até 100 <br> <b>Tamanho</b> - Entre 4km por 2km até 6km por 3km <br> <b>População</b> - Entre 60 até 90 mil pessoas <br> <b>Armamentos extras</b> - Pode carregar torpedos, armas anti-projétil e um aríete <br> <b>Pode transportar mercadorias?</b> - Sim <br> <b>É necessário ter licensa mercante para transportar mercadorias?</b> - Sim <br> <b>Pode ser da Frota Imperial?</b> - Sim <br> <b>É obrigatoriamente da Frota Imperial?</b> - Não <br> <b>Pode ter armamento anti-planetário?</b> - Somente com permissão imperial
+                </p>
+                <p class="página" id="p4">
+                    <b>Classe Cruzador Pesado</b> <br> <b>Canhões</b> - Entre 90 até 100 <br> <b>Tamanho</b> - Entre 4km por 2km até 6km por 3km <br> <b>População</b> - Entre 50 até 70 mil pessoas <br> <b>Armamentos extras</b> - Pode carregar torpedos, armas anti-projétil, aríete, canhões magnéticos e reator do tipo Último Recurso <br> <b>Pode transportar mercadorias?</b> - Não <br> <b>É necessário ter licensa mercante para transportar mercadorias?</b> - Não é permitido transporte de mercadorias <br> <b>Pode ser da Frota Imperial?</b> - Sim <br> <b>É obrigatoriamente da Frota Imperial?</b> - Não <br> <b>Pode ter armamento anti-planetário?</b> - Somente com permissão imperial
+                </p>
+                <p class="página" id="p5">
+                    <b>Classe Cruzador</b> <br> <b>Canhões</b> - Entre 60 até 80 <br> <b>Tamanho</b> - Entre 3km por 2km até 4km por 2km <br> <b>População</b> - Entre 40 até 60 mil pessoas <br> <b>Armamentos extras</b> - Pode carregar torpedos, armas anti-projétil, aríete, canhões magnéticos e reator do tipo Último Recurso <br> <b>Pode transportar mercadorias?</b> - Não <br> <b>É necessário ter licensa mercante para transportar mercadorias?</b> - Não é permitido transporte de mercadorias <br> <b>Pode ser da Frota Imperial?</b> - Sim <br> <b>É obrigatoriamente da Frota Imperial?</b> - Não <br> <b>Pode ter armamento anti-planetário?</b> - Não
+                </p>
+                <p class="página" id="p6">
+                    <b>Classe Cruzador Leve</b> <br> <b>Canhões</b> - Entre 50 até 56 <br> <b>Tamanho</b> - Entre 2km por 1km até 2km por 2km <br> <b>População</b> - Entre 40 até 60 mil pessoas <br> <b>Armamentos extras</b> - Pode carregar armas anti-projétil, aríete e reator do tipo Último Recurso <br> <b>Pode transportar mercadorias?</b> - Não <br> <b>É necessário ter licensa mercante para transportar mercadorias?</b> - Não é permitido transporte de mercadorias <br> <b>Pode ser da Frota Imperial?</b> - Sim <br> <b>É obrigatoriamente da Frota Imperial?</b> - Não <br> <b>Pode ter armamento anti-planetário?</b> - Não
+                </p>
+                <p class="página" id="p7">
+                    <b>Classe Fragata</b> <br> <b>Canhões</b> - Entre 60 até 70 <br> <b>Tamanho</b> - Entre 2km por 1km até 2km por 2km <br> <b>População</b> - Entre 50 até 60 mil pessoas <br> <b>Armamentos extras</b> - Pode carregar armas carregar torpedos, anti-projétil e canhões magnéticos <br> <b>Pode transportar mercadorias?</b> - Não <br> <b>É necessário ter licensa mercante para transportar mercadorias?</b> - Não é permitido transporte de mercadorias <br> <b>Pode ser da Frota Imperial?</b> - Sim <br> <b>É obrigatoriamente da Frota Imperial?</b> - Sim <br> <b>Pode ter armamento anti-planetário?</b> - Não
+                </p>
+                <p class="página" id="p8">
+                    <b>Classe Corveta</b> <br> <b>Canhões</b> - Entre 40 até 50 <br> <b>Tamanho</b> - Entre 1km por 1km até 2km por 2km <br> <b>População</b> - Entre 30 até 40 mil pessoas <br> <b>Armamentos extras</b> - Pode carregar armas carregar torpedos, anti-projétil e canhões magnéticos <br> <b>Pode transportar mercadorias?</b> - Não <br> <b>É necessário ter licensa mercante para transportar mercadorias?</b> - Não é permitido transporte de mercadorias <br> <b>Pode ser da Frota Imperial?</b> - Sim <br> <b>É obrigatoriamente da Frota Imperial?</b> - Não <br> <b>Pode ter armamento anti-planetário?</b> - Não
+                </p>
+                <p class="página" id="p9">
+                    <b>Classe raeda</b> <br> <b>Canhões</b> - Transportadoras não podem ter armas <br> <b>Tamanho</b> - Entre 2km por 1km até 3km por 3km <br> <b>População</b> - Entre 60 até 100 mil pessoas <br> <b>Armamentos extras</b> - Transportadoras não podem ter armas <br> <b>Pode transportar mercadorias?</b> - Sim <br> <b>É necessário ter licensa mercante para transportar mercadorias?</b> - Sim <br> <b>Pode ser da Frota Imperial?</b> - Sim <br> <b>É obrigatoriamente da Frota Imperial?</b> - Não <br> <b>Pode ter armamento anti-planetário?</b> - Transportadoras não podem ter armas
+                </p>
+                <p class="página" id="p10">
+                    <b>Naves genéricas</b> (não necessitam de classificação específica) <br> <b>Canhões</b> - Entre 0 até 20 <br> <b>Tamanho</b> - Entre 1km por 1km até 2km por 2km <br> <b>População</b> - Entre 20 até 30 mil pessoas <br> <b>Armamentos extras</b> - Naves genéricas não podem ter armas extras <br> <b>Pode transportar mercadorias?</b> - Sim <br> <b>É necessário ter licensa mercante para transportar mercadorias?</b> - Não <br> <b>Pode ser da Frota Imperial?</b> - Não <br> <b>É obrigatoriamente da Frota Imperial?</b> - Não pode ser da Frota Imperial <br> <b>Pode ter armamento anti-planetário?</b> - Não
+                </p>
             </div>
             <div class="botsetas">
                 <button class="setaL" id="setaL"> SL </button>
@@ -72,11 +101,12 @@
 
     </div>
 
-    <script>
-    document.addEventListener("DOMContentLoaded", () => {
-        manualP1(); // Chama a função ao carregar a página
-    });
-    </script>
+    <!-- <script>
+    window.onload = () => {
+        escondePag();
+        percorreManual();
+    }
+    </script> -->
 
 </body>
 
