criação da comporta do manual (não funciona ainda)

--- a/testes e placeholders/Teste1/index.html
+++ b/testes e placeholders/Teste1/index.html
@@ -82,6 +82,9 @@
                 <button class="setaR" id="setaR"> SR </button>
                 
             </div>
+            <div class="comporta">
+                <img src="./images/Comporta-do-Manual-px.gif" alt="comportaGif">
+            </div>
         </div>
 
         <div class="botoes">
