--- a/testes e placeholders/Teste1/index.html
+++ b/testes e placeholders/Teste1/index.html
@@ -80,12 +80,12 @@
             <div class="botsetas">
                 <button class="setaL" id="setaL"> SL </button>
                 <button class="setaR" id="setaR"> SR </button>
-                
             </div>
-            <div class="comporta">
-                <img src="./images/Comporta-do-Manual-px.gif" alt="comportaGif">
-            </div>
+            <img class="comportaF" id="comportaF" src="./images/Comporta do Manual-px.png" alt="comportaF">
+            <img class="comportaA" id="comportaA" src="./images/Comporta-do-Manual-abrindo.gif">
+            <img class="comportaB" id="comportaB" src="./images/Comporta-do-Manual-fechando.gif">
         </div>
+        <button class="botaoC" id="botC" onclick="abremanual()"> bc </button>  
 
         <div class="botoes">
             <button class="botao1" id="bot1" onclick="introT1()"> b1 </button>  
