--- a/testes e placeholders/Teste1/index.html
+++ b/testes e placeholders/Teste1/index.html
@@ -92,8 +92,16 @@
             <button class="botao2" id="bot2" onclick="introT1()"> b2 </button>
         </div>
         
-        
+        <div class="HUD2">
+            <img src="./images/X.gif" id="x1">
+            <img src="./images/X2.gif" id="x2">
+            <img src="./images/X3.gif" id="x3">
+        </div>
+        <button id="botX" onclick="marcaX()"> bX </button>
         <img src="./images/HUD2-px.png" id="HUD2" alt="HUD2">
+        <img src="./images/Fade.png" id="FadeOut">
+        <img src="./images/Fadepng" id="FadeIn">
+
         <div class="radar">
             <img src="./images/RadarPX.gif" id="radar" alt="radar">
         </div>
