add contador de dias

--- a/testes e placeholders/Teste1/index.html
+++ b/testes e placeholders/Teste1/index.html
@@ -98,6 +98,11 @@
             <img src="./images/X2.gif" id="x2">
             <img src="./images/X3.gif" id="x3">
         </div>
+        <div class="Cdia">
+            <img src="./images/contador de dia.png" id="Cdia">
+            <p id="Tdia"> 1 </p>
+            <img src="./images/sobreposição do dia.png" id="Sdia">
+        </div>
         <button id="botX" onclick="marcaX()"> bX </button>
         <img src="./images/Fade.png" id="FadeOut">
         <img src="./images/Fadepng" id="FadeIn">
