Adição do botao 'Avança Dialogo' para evitar confusão

--- a/testes e placeholders/Teste1/index.html
+++ b/testes e placeholders/Teste1/index.html
@@ -88,9 +88,10 @@
         <button class="botaoC" id="botC" onclick="abremanual()"> bc </button>  
 
         <div class="botoes">
-            <button class="botao1" id="bot1" onclick="introT1()"> b1 </button>  
-            <button class="botao2" id="bot2" onclick="introT1()"> b2 </button>
+            <button class="botao1" id="bot1"> b1 </button>  
+            <button class="botao2" id="bot2"> b2 </button>  
         </div>
+        <button class="botao3" id="bot3" onclick="introT1()"> AD </button>
         
         <div class="HUD2">
             <img src="./images/HUD2-px.png" id="HUD2" alt="HUD2">
