Esqueci de adicionar o 'retorna dialogo' kk

--- a/testes e placeholders/Teste1/index.html
+++ b/testes e placeholders/Teste1/index.html
@@ -91,8 +91,10 @@
             <button class="botao1" id="bot1"> b1 </button>  
             <button class="botao2" id="bot2"> b2 </button>  
         </div>
-        <button class="botao3" id="bot3" onclick="introT1()"> AD </button>
-        
+        <div class="botao3" >
+        <button id="bot3" onclick="introT1()"> AD </button>
+        <button id="bot4"> RD </button>
+        </div>
         <div class="HUD2">
             <img src="./images/HUD2-px.png" id="HUD2" alt="HUD2">
             <img src="./images/X.gif" id="x1">
