--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 
 <body>
 
-    <div class="game-board"> 
+    <div class="fundao"></div> 
+    
+    <div class="game-board">
 
         <img src="./images/fundo-px.png" id="fundo" alt="fundo">
 
