--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="./css/style2.css">
-    <link rel="stylesheet" href="./css/style_manual.css">
-    <script src="./js/script2.js" defer></script>
+    <script src="./js/tarefas.js" defer></script>
+    <script src="./js/scriptD1.js" defer></script>
+    <script src="./js/scriptD2.js" defer></script>
 
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
@@ -125,7 +126,7 @@
         </div>
         <button id="botX" onclick="marcaX()"> bX </button>
         <img src="./images/Fade.png" id="FadeOut">
-        <img src="./images/Fadepng" id="FadeIn">
+        <img src="./images/Fade.png" id="FadeIn">
 
         <div class="radar">
             <img src="./images/RadarPX.gif" id="radar" alt="radar">
