implementaçao do Anti-Spam e alteração do arquivo tarefas para a biblioteca de tarefas e funções

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="./css/style2.css">
-    <script src="./js/funcoes.js" defer></script>
-    <script src="./js/tarefas.js" defer></script>
+    <script src="./js/Tarefas&Funções.js" defer></script>
     <script src="./js/scriptD1.js" defer></script>
     <script src="./js/scriptD2.js" defer></script>
 
@@ -125,7 +124,6 @@
                 <img src="./images/sobreposição do dia.png" id="Sdia">
             </div>
         </div>
-        <button id="botX" onclick="marcaX()"> bX </button>
         <img src="./images/Fade.png" id="FadeOut">
         <img src="./images/Fade.png" id="FadeIn">
 
