--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="./js/Tarefas&Funções.js" defer></script>
     <script src="./js/scriptD1.js" defer></script>
     <script src="./js/scriptD2.js" defer></script>
+    <script src="./js/scriptD3.js" defer></script>
 
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
@@ -133,6 +134,7 @@
         <img src="./images/medalhas-px.png" id="medalhas" alt="medalhas">
         <img src="./images/placa-px.png" id="placa" alt="placa">
         <img src="./images/Livro-px.png" id="livro" alt="livro">
+        <button onclick="cdia2()"> D2 </button>
 
     </div>
 
