adição do monitor do canhão, junto com a função q faz com que ele visivelmente dispare no apertar do bot2

--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
             <button id="bot1"> b1 </button> 
             <img src="./images/Botao1.png" id="b1"> 
         </div>
+        <img src="./images/MCanhões.png" id="MCanhões">
         <div class="botao2">
             <button id="bot2"> b2 </button>  
             <img src="./images/Botao2.png" id="b2"> 
