Adição do monitor dos escudos, junto com a função q faz com que ele visivelmente desligue no apertar do bot1

--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
             <button id="bot2"> b2 </button>  
             <img src="./images/Botao2.png" id="b2"> 
         </div>
+        <img src="./images/GEscudos.gif" id="GEscudos">
         <div class="botoes2">
             <img src="./images/Fundo para Setas.png" id="fundsetas">
             <div class="botao3" >
