adição do dia 3

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="./js/scriptD1.js" defer></script>
     <script src="./js/scriptD2.js" defer></script>
     <script src="./js/scriptD3.js" defer></script>
+    <script src="./js/scriptD4.js" defer></script>
 
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
@@ -137,7 +138,7 @@
         <img src="./images/medalhas-px.png" id="medalhas" alt="medalhas">
         <img src="./images/placa-px.png" id="placa" alt="placa">
         <img src="./images/Livro-px.png" id="livro" alt="livro">
-        <button onclick="cdia2()"> D2 </button>
+        <button onclick="cdia3()"> D3 </button>
 
     </div>
 
