Revert "tentativa de transformar as questoes"
This reverts commit ea6c6be9f206ab4f23ae3a5d3db9bd348454e397.

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             </p>
             <p class="interlocIntro" id="3"> 14° Comandante de Armas </p>
             <p class="intro" id="3">
-                Lembre-se, ninguém que tenha a entrada negada pode simplesmente fugir, ter a entrada negada quer dizer que o Deus-Imperador nunca quis sua presença aqui e ter vindo aqui sabendo disso é heresia, e você sabe bem o que acontece com hereges, Oficial, de certo modo tem seu emprego por conta da heresia dos outros.
+                Lembre-se, ninguém que tenha a entrada negada pode simplesmente fugir, ter a entrada negada quer dizer que o Deus-Imperador nunca quis sua presença aqui e ter vindo aqui sabendo disso é heresia, e você sabe bem o que acontece com hereges, Oficial, de certo modo tem seu emprego por conta da heresia dos outros. <button class="botcontinuar" id="1" onclick="escreveDialogo(interlocTut, dialogoTut)">Continuar...</button>
             </p>
         </div>
 
@@ -168,36 +168,6 @@
                 Nos próximos momentos uma frota trazendo mais soldados da guarda da casa Von Velancius chegará para garantir a ordem, permita as entradas deles, e permita assim que eles aparecerem, esses soldados são de extrema importância, em hipótese alguma dispare as baterias na frota, será executado se fizer isso. Estarei deixando você sozinho agora, sirva bem e viva bem, adeus Oficial. <button class="botcontinuar" id="2" onclick="tutorial()">Continuar...</button>
             </p>
         </div>
-
-        <div class="monologosSistema">
-            <p class="interlocSis2">SISTEMA</p>
-            <p class="monoSisD2">
-                -BEM VINDO DE VOLTA OFICIAL, SUA FREQUÊNCIA FOI ATUALIZADA COM SUCESSO, MANTENHA A SUA FREQUÊNCIA COMO O ESPERADO POR 5 DIAS E TERÁ UM BÔNUS DE 1 MINUTO E MEIO EM SEU HORÁRIO DE INTERVALO. SIRVA BEM, VIVA BEM. ATIVIDADE FRONTEIRIÇA ALTA, AGUARDANDO SEU COMANDO- <button class="botcontinuar" id="4" onclick="passaTarefas(marcaX, tarefasD2)">Continuar...</button>
-            </p>
-        </div>
-
-        <div class="mecanicos">
-            <div id="dia2">
-                <p class="interlocMec2" id="1">Servitor Mecânico</p>
-                <p class="interlocMec2" id="2">Servitor Mecânico</p>
-                <p class="interlocMec2" id="3">Servitor Mecânico</p>
-                <p class="interlocMec2" id="4">SISTEMA</p>
-
-                <p class="dialogoMec2" id="1">
-                    Licença Senhor Oficial, só fazendo algumas inspeções rotineiras na sala, o sistema ficará desativado momentaneamente, enquanto eu realizo meus serviços, agradeço pela sua paciência Senhor Oficial.
-                </p>
-                <p class="dialogoMec2" id="2">
-                    Ei, Oficial, me escute enquanto o há tempo! Perdoe-me pelo que vou dizer, mas preciso de um favor seu. Um passarinho me contou que a frota mercante que vinha trazendo suprimentos foi roubada por piratas. Pelo que eu ouvi roubaram a documentação junto com a carga, mas ainda são eles, que devem chegar ainda hoje. Por favor Oficial, deixe eles entrarem, as cidades estão sem suprimentos, o povo está com fome.
-                </p>
-                <p class="dialogoMec2" id="3">
-                    Não se preocupe, Eles não podem nos ouvir. Não enquanto o sistema está desligado. Pense bem no que eu disse, Oficial. O povo conta com o senhor...
-                </p>
-                <p class="dialogoMec2" id="4">
-                    -SISTEMAS 100 POR CENTO FUNCIONAIS NOVAMENTE, VOLTANDO A OBRIGAÇÕES DIÁRIAS-
-                    <button class="botcontinuar" id="6" onclick="passaTarefas(marcaX, tarefasD2, 3)">Continuar...</button>
-                </p>
-            </div>
-        </div>
     </div>
 
     <div class="dilemas">
@@ -205,17 +175,11 @@
             <p class="interlocsD1" id="1">Capitão de Classe Raeda</p>
             <p class="textosD1">Não atire! Por favor, nos escute, somos antigos soldados da casa RavenHawk, a casa que tinha controle do planeta antes da Lady Theodora tomar controle, estamos sem ter para onde ir, depois de nosso líder ter sido acusado e morto por traição não conseguimos encontrar trabalho em lugar nenhum, sei que somos de casas rivais e que suas ordens devem ser de atirar em nós, mas por favor tenha piedade, nossa frota esta de acordo com o regulamento, se você nós deixar entrar o sistema não irá te punir, não iremos contar para ninguém do que você fez! Por favor, tenha misericórdia e nós de a chance de encontrar abrigo no planeta novamente.</p>
         </div>
-        <div class="dilema2">
-            <div id="chamaDil2"></div>
-            <p class="interlocsD2" id="1">'Capitão de Classe Galeão</p>
-            <p class="interlocsD2" id="2">SISTEMA</p>
-
-            <p class="textosD2" id="1">Sumo Oficial, escute o que nós temos a dizer, nossa frota foi saqueada por piratas enquanto vinha até seu planeta, roubaram parte de nossa carga e toda documentação. Ainda temos carga o bastante para suprir as necessidades básicas do planeta, lhe imploro para permitir nossa entrada. Caso negue, sairemos prejudicados também, pois não tem quem compre o que restou de nossa carga, seremos obrigados a descartar ela.</p>
-            <p class="textosD2" id="2">-RETIRANDO A FALTA DE DOCUMENTAÇÃO, TODAS AS 57 NAVES DA FROTA SEGUEM O REGULAMENTO-</p>
-        </div>
+        <div class="dilema2"></div>
         <div class="dilema3"></div>
         <div class="dilema4"></div>
     </div>
+
 </body>
 
 </html>
